# TOSSS-LLM-Benchmark

./: .gitignore  LICENSE  README  README.md  TODO.md  analyze_results.py  basic_test.py  config.json  config_cpp.json  data_extraction.py  main.py  openrouter-anthropic-claude-3-opus.csv  openrouter-anthropic-claude-3.5-sonnet_c_cpp.csv  openrouter-anthropic-claude-3.5-sonnet_c_cpp_hint.csv  openrouter-anthropic-claude-3.5-sonnet_java_hint.csv  openrouter-anthropic-claude-opus-4.6_c_cpp.csv  openrouter-anthropic-claude-opus-4.6_java.csv  openrouter-anthropic-claude-opus-4.6_java_hint.csv.rng_state.json  openrouter-anthropic-claude-sonnet-4.6_java.csv  openrouter-anthropic-claude-sonnet-4.6_java_hint.csv  openrouter-deepseek-deepseek-r1-0528-qwen3-8b:free.csv  openrouter-deepseek-deepseek-v3.2_java.csv  openrouter-deepseek-deepseek-v3.2_java_hint.csv  openrouter-google-gemini-3-flash-preview_c_cpp.csv  openrouter-google-gemini-3-flash-preview_c_cpp_hint.csv  openrouter-google-gemini-3-flash-preview_c_cpp_hint.csv.rng_state.json  openrouter-google-gemini-3-flash-preview_java.csv  openrouter-google-gemini-3-flash-preview_java_hint.csv  openrouter-google-gemini-3.1-flash-lite-preview_java.csv.rng_state.json  openrouter-google-gemini-3.1-flash-lite-preview_java_hint.csv  openrouter-meta-llama-llama-3-70b-instruct_c_cpp.csv  openrouter-meta-llama-llama-3-70b-instruct_c_cpp_hint.csv  openrouter-meta-llama-llama-3-70b-instruct_java_hint.csv  openrouter-minimax-minimax-m2.5_c_cpp.csv  openrouter-minimax-minimax-m2.5_c_cpp_hint.csv  openrouter-minimax-minimax-m2.5_java.csv  (+23 more)
(+44 files in other folders)
